
=======================================================
            WanT code:  Log of Changes 
=======================================================


Apr 02 2010      Bug fixed in the write_eigchn procedure (conductor). 
                 Cleanup of the transport part. (AF)

18 Mar 2010      configure.ac updated using todays QE cvs version. Changes to
                 makefile system (in particular related to the build_date var). 
                 ~want/install dir added. (AF)

16 Mar 2010      Portability on Sun f95 compiler added. (AF)

15 Mar 2010      iotk moved to extlibs. A number of related minor changes done. 
                 Version updated to 2.3.0 .(AF)

19 Jan 2010      erorr given when trying to use smearing and correlation
                 self-energies. The condition can be made looser (just avoid
                 non-hermitean self-energies), or the general case can be
                 implemented. (AF)
                 Bug fixed in embed when using dynamical self-energies to build
                 the lead self-energies. The same problem is still present in 
                 the transport part. (AF)

18 Jan 2010      Bug fixed in transport/kpoints.f90. It was affecting the
                 dumping of sgm lead data and embed. Pointed out by D. Prezzi. (AF)

22 Nov 2009      IOTK lib updated with today's CVS version. 
                 extlibs directory added; blas and lapack moved there;
                 configure.ac updated using the one from espresso cvs;
                 other install falies updated; Makefile system changed in plugins. (AF)

10 Nov 2009      npkx parameter increased to 10000. Checks added. 
                 fmt for kpt writing updated. (AF)

25 Oct 2009      Auxiliary data to plot the eigenchannel analysis are written on demand
                 by conductor.x. Some input vars added. (AF)

26 Aug 2009      Makefiles in plug-ins fixed for -z option in tar. (AF)
